02_K8_Deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-ingress
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-service
            port:
              number: 80 
      - pathType: Prefix
        path: "/todo"
        backend:
          service:
            name: todo-service
            port:
              number: 80
